--- a/Chat/Chat/en.lproj/Localizable.strings
+++ b/Chat/Chat/en.lproj/Localizable.strings
@@ -8,7 +8,7 @@
 
 //MARK: - MainViewController
 
-"navigationItemTitle" = "Chat";
+"navigationItemTitle" = "Tinkoff Chat";
 
 //MARK:  - ProfileViewController
 
