--- a/Chat/Chat/ru.lproj/Localizable.strings
+++ b/Chat/Chat/ru.lproj/Localizable.strings
@@ -8,7 +8,7 @@
 
 //MARK: - MainViewController
 
-"navigationItemTitle" = "Чат";
+"navigationItemTitle" = "Тинькофф Чат";
 
 //MARK:  - ProfileViewController
 
