--- a/Chat/Chat/ru.lproj/Localizable.strings
+++ b/Chat/Chat/ru.lproj/Localizable.strings
@@ -19,3 +19,6 @@
 "cameraAction" = "Камера";
 "gallaryAction" = "Галерея";
 "deleteAction" = "Удалить";
+
+//MARK: - ConversationViewController
+"messageInputFieldPlaceholder" = "сообщение...";
