add placeholder to messageInputField

--- a/Chat/Chat/en.lproj/Localizable.strings
+++ b/Chat/Chat/en.lproj/Localizable.strings
@@ -21,4 +21,7 @@
 "deleteAction" = "Delete";
 
 //MARK: - ConversationViewController
-"messageInputFieldPlaceholder" = "message...";
+"messageInputFieldPlaceholder" = "Message...";
+"onlineHeaderTitle" = "Online";
+"offlineHeaderTitle" = "Offline";
+
