changed Profile labels to textView and textField

--- a/Chat/Chat/en.lproj/Localizable.strings
+++ b/Chat/Chat/en.lproj/Localizable.strings
@@ -20,6 +20,7 @@
 "cameraAction" = "Camera";
 "gallaryAction" = "Gallery";
 "deleteAction" = "Delete";
+"nameTextFieldPlaceholder" = "Your name";
 
 //MARK: - ConversationViewController
 "messageInputFieldPlaceholder" = "Message...";
