--- a/Chat/Chat/ru.lproj/Localizable.strings
+++ b/Chat/Chat/ru.lproj/Localizable.strings
@@ -20,6 +20,7 @@
 "cameraAction" = "Камера";
 "gallaryAction" = "Галерея";
 "deleteAction" = "Удалить";
+"nameTextFieldPlaceholder" = "Ваше имя";
 
 //MARK: - ConversationViewController
 "messageInputFieldPlaceholder" = "Сообщение...";
