--- a/Chat/Chat/en.lproj/Localizable.strings
+++ b/Chat/Chat/en.lproj/Localizable.strings
@@ -21,6 +21,11 @@
 "gallaryAction" = "Gallery";
 "deleteAction" = "Delete";
 "nameTextFieldPlaceholder" = "Your name";
+"alertOkActionTitle" = "Ok";
+"alertRepeatSaveAction" = "Repeat";
+"successAlertTitle" = "Data saved";
+"failureAlertTitle" = "Error";
+"failureAlertMessage" = "Failed to save data";
 
 //MARK: - ConversationViewController
 "messageInputFieldPlaceholder" = "Message...";
