Delete Operation handler in Profile (only GCD used)

--- a/Chat/Chat/en.lproj/Localizable.strings
+++ b/Chat/Chat/en.lproj/Localizable.strings
@@ -26,6 +26,7 @@
 "successAlertTitle" = "Data saved";
 "failureAlertTitle" = "Error";
 "failureAlertMessage" = "Failed to save data";
+"saveButtonTitle" = "Save";
 
 //MARK: - ConversationViewController
 "messageInputFieldPlaceholder" = "Message...";
