static get/post channels and messages

--- a/Chat/Chat/en.lproj/Localizable.strings
+++ b/Chat/Chat/en.lproj/Localizable.strings
@@ -6,11 +6,11 @@
   
 */
 
-//MARK: - MainViewController
+// MARK: - MainViewController
 
 "navigationItemTitle" = "Tinkoff Chat";
 
-//MARK: - ProfileViewController
+// MARK: - ProfileViewController
 
 "profileLabel" = "My Profile";
 "closeButtonTitle" = "Close";
@@ -28,13 +28,16 @@
 "failureAlertMessage" = "Failed to save data";
 "saveButtonTitle" = "Save";
 
-//MARK: - ConversationViewController
+// MARK: - ConversationViewController
 "messageInputFieldPlaceholder" = "Message...";
-"onlineHeaderTitle" = "Online";
-"offlineHeaderTitle" = "Offline";
+"headerTitle" = "Channels";
 
-//MARK: = ThemesViewController
+// MARK: - ThemesViewController
 "closeButtonTitle" = "Close";
 "theme1ButtonTitle" = "Light";
 "theme2ButtonTitle" = "Dark";
 "theme3ButtonTitle" = "Dark blue";
+
+// MARK: - TabBarController
+"profile" = "Profile";
+"channels" = "Channels";
