add header for messages of one day

--- a/Chat/Chat/en.lproj/Localizable.strings
+++ b/Chat/Chat/en.lproj/Localizable.strings
@@ -29,6 +29,7 @@
 // MARK: - ConversationViewController
 "messageInputFieldPlaceholder" = "Message...";
 "headerTitle" = "Channels";
+"headerDateTitle" = "Today";
 
 // MARK: - ConversationsListCell
 "noMessages" = "No messages yet";
