add cancel action in Profile image alert

--- a/Chat/Chat/en.lproj/Localizable.strings
+++ b/Chat/Chat/en.lproj/Localizable.strings
@@ -16,6 +16,7 @@
 "cancelButtonTitle" = "Cancel";
 "editImageButtonTitle" = "Edit";
 "cameraAction" = "Camera";
+"cancelAction" = "Cancel";
 "gallaryAction" = "Gallery";
 "deleteAction" = "Delete";
 "nameTextFieldPlaceholder" = "Your name";
