--- a/Chat/Chat/ru.lproj/Localizable.strings
+++ b/Chat/Chat/ru.lproj/Localizable.strings
@@ -16,6 +16,7 @@
 "cancelButtonTitle" = "Отмена";
 "editImageButtonTitle" = "Править";
 "cameraAction" = "Камера";
+"cancelAction" = "Отмена";
 "gallaryAction" = "Галерея";
 "deleteAction" = "Удалить";
 "nameTextFieldPlaceholder" = "Ваше имя";
