Add secret Theme

--- a/Chat/Chat/ru.lproj/Localizable.strings
+++ b/Chat/Chat/ru.lproj/Localizable.strings
@@ -44,6 +44,7 @@
 "theme1ButtonTitle" = "Светлая";
 "theme2ButtonTitle" = "Темная";
 "theme3ButtonTitle" = "Темно-синяя";
+"theme4ButtonTitle" = "Единорог";
 
 // MARK: - TabBarController
 "profile" = "Профиль";
