Add Unicorns xD

--- a/Chat/Chat/en.lproj/Localizable.strings
+++ b/Chat/Chat/en.lproj/Localizable.strings
@@ -44,7 +44,7 @@
 "theme1ButtonTitle" = "Light";
 "theme2ButtonTitle" = "Dark";
 "theme3ButtonTitle" = "Dark blue";
-"theme4ButtonTitle" = "Unicorn";
+"theme4ButtonTitle" = "🦄";
 
 // MARK: - TabBarController
 "profile" = "Profile";
