change app icons

--- a/Chat/Chat/ru.lproj/Localizable.strings
+++ b/Chat/Chat/ru.lproj/Localizable.strings
@@ -7,7 +7,7 @@
 */
 
 // MARK: - MainViewController
-"navigationItemTitle" = "Тинькофф Чат";
+"navigationItemTitle" = "Чат";
 
 // MARK:  - ProfileViewController
 "profileLabel" = "Мой Профиль";
