--- a/Chat/Chat/en.lproj/Localizable.strings
+++ b/Chat/Chat/en.lproj/Localizable.strings
@@ -7,7 +7,7 @@
 */
 
 // MARK: - MainViewController
-"navigationItemTitle" = "Tinkoff Chat";
+"navigationItemTitle" = "Chat";
 
 // MARK: - ProfileViewController
 "profileLabel" = "My Profile";
